tests/samples/positive/expressions/if_expression_else_if.ax
module if_expression_else_if;

fn classify(value: i32) -> i32 {
    return if value < 0 {
        -1
    } else if value == 0 {
        0
    } else if value == 1 {
        1
    } else {
        2
    };
}

fn main() -> i32 {
    if classify(-1) != -1 {
        return 1;
    }
    if classify(0) != 0 {
        return 2;
    }
    if classify(1) != 1 {
        return 3;
    }
    if classify(9) != 2 {
        return 4;
    }
    return 0;
}
