tests/samples/negative/expressions/signed_modulo_overflow.ax
module signed_modulo_overflow;

fn main() -> i32 {
    let value: i32 = -2147483648 % -1;
    return value;
}
